--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="CSS/style.css">
         <title>MARA ZUKER</title>
@@ -28,31 +29,37 @@
         </header>
         <!--CONTENIDO DEL SITIO-->
         <main>
-            <section id="contenedorInicio">
-                <article>
-                    <img src="images/inicio/12 sobri.jpg" alt="">
-                </article>
-                <article>
-                    <img src="images/inicio/8 b maxi.JPG" alt="">
-                </article>
-                    <img src="images/inicio/2751AA004.jpg" alt="">
-                <article>
-                    <img src="images/inicio/9 maxi.JPG" alt="">
-                </article>
-                <article>
-                    <img src="images/inicio/buscar foto de calidad.JPG" alt="">
-                </article>
-                <article>
-                    <img src="images/inicio/11 lu.jpg" alt="">
-                </article>
-        </section>
+            <div id="carouselExampleFade" class="carousel slide carousel-fade">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/inicio/maxi1.JPG" class="d-block w-100" alt="sobrina">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/inicio/sobrijpg.jpg" class="d-block w-100" alt="maxi1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/inicio/lu.jpg" class="d-block w-100" alt="dani">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/inicio/maxi2.JPG" class="d-block w-100" alt="maxi2">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
         </main>
         
         <!--PIE DE PAGINA-->
         <footer id="footer">
             <!--CAJA#1 LOGONOMBRE-->
             <article class="footerLogonombre">
-                <h4>MARA ZUKER</h4> <br>
+                <h4>mara zuker</h4> <br>
                 <p> Copyright © All rights reserved.</p>
             </article>
 
@@ -76,5 +83,6 @@
                 </ul>
         </article>
         </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
     </html>   
