--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
             <!--MENU NAV-->
             <nav id="navBar">
                 <article class="LogoHeader">
-                    <h4><a href="#">mara zuker</a></h4> <br>
+                    <h4><a href="#">mara zuker</a></h4>
+                </article>
+                <input type="checkbox" id="check">
+                <article class="barras">
+                <label for="check" class="checktn">
+                    <i class="fas fa-bars"></i>
+                </label>
                 </article>
                 <article class="MenuNav">
                     <ul> 
@@ -25,6 +31,7 @@
                         <li><a href="pages/contacto.html">contacto</a></li>
                     </ul>
                 </article>
+
             </nav>
         </header>
         <!--CONTENIDO DEL SITIO-->
@@ -59,7 +66,7 @@
         <footer id="footer">
             <!--CAJA#1 LOGONOMBRE-->
             <article class="footerLogonombre">
-                <h4>mara zuker</h4> <br>
+                <h4>MARA ZUKER</h4> <br>
                 <p> Copyright © All rights reserved.</p>
             </article>
 
