--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
             <div id="carouselExampleFade" class="carousel slide carousel-fade">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/inicio/maxi1.JPG" class="d-block w-100" alt="sobrina">
+                        <img src="images/inicio/8 b maxi.JPG" class="d-block w-100" alt="sobrina">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/inicio/sobrijpg.jpg" class="d-block w-100" alt="maxi1">
+                        <img src="images/inicio/12 sobri.jpg" class="d-block w-100" alt="maxi1">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/inicio/lu.jpg" class="d-block w-100" alt="dani">
+                        <img src="images/inicio/11 lu.jpg" class="d-block w-100" alt="dani">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/inicio/maxi2.JPG" class="d-block w-100" alt="maxi2">
+                        <img src="images/inicio/9 maxi.JPG" class="d-block w-100" alt="maxi2">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -66,7 +66,7 @@
         <footer id="footer">
             <!--CAJA#1 LOGONOMBRE-->
             <article class="footerLogonombre">
-                <h4>MARA ZUKER</h4> <br>
+                <h4>mara zuker</h4> <br>
                 <p> Copyright © All rights reserved.</p>
             </article>
 
