--- a/pages/lugares.html
+++ b/pages/lugares.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
         <link rel="stylesheet" href="../CSS/style.css">
         <title>MARA ZUKER</title>
     </head>
@@ -14,7 +13,13 @@
             <!--MENU NAV-->
             <nav id="navBar">
                 <article class="LogoHeader">
-                    <h4><a href="../index.html">mara zuker</a></h4>
+                    <h4><a href="#">mara zuker</a></h4>
+                </article>
+                <input type="checkbox" id="check">
+                <article class="barras">
+                <label for="check" class="checktn">
+                    <i class="fas fa-bars"></i>
+                </label>
                 </article>
                 <article class="MenuNav">
                     <ul> 
@@ -23,8 +28,9 @@
                         <li><a href="#">lugares</a></li>
                         <li><a href="bio.html">bio</a></li>
                         <li><a href="contacto.html">contacto</a></li>
-                </ul>
+                    </ul>
                 </article>
+
             </nav>
         </header>
 
@@ -36,21 +42,20 @@
                 <img src="../images/lugares/lugares 1.JPG" alt="bajada">
                 <img src="../images/lugares/lugares 2.JPG" alt="escuela">
                 <img src="../images/lugares/lugares 3.JPG" alt="jerusalem">
-                <img src="../images/lugares/lugares 4.JPG" alt="cesarea">
+                <img src="../images/lugares/lugares 4.jpg" alt="cesarea">
                 <img src="../images/lugares/lugares 5.jpg" alt="lesboa">
                 <img src="../images/lugares/lugares 6.JPG" alt="estambul">
                 <img src="../images/lugares/lugares 7.JPG" alt="military"> <br>
                 <img src="../images/lugares/lugares 8.JPG" alt="chicos">
                 <img src="../images/lugares/lugares 9.JPG" alt="pajaro">
             </section>
-
         </main>
         
         <!--PIE DE PAGINA-->
         <footer id="footer">
             <!--CAJA#1 LOGONOMBRE-->
             <article class="footerLogonombre">
-                <h4>MARA ZUKER</h4> <br>
+                <h4>mara zuker</h4> <br>
                 <p> Copyright © All rights reserved.</p>
             </article>
 
