--- a/pages/personas.html
+++ b/pages/personas.html
@@ -13,7 +13,7 @@
             <!--MENU NAV-->
             <nav id="navBar">
                 <article class="LogoHeader">
-                    <h4><a href="#">mara zuker</a></h4>
+                    <h4><a href="../index.html">mara zuker</a></h4>
                 </article>
                 <input type="checkbox" id="check">
                 <article class="barras">
