--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -40,12 +40,12 @@
             <section id="contenedorContacto"> 
                 <article class="formContacto">
                     <form action="#">
-                        <input class="formcontactoNombre" type="text" placeholder=" Nombre:"> <br> <br>
-                        <input class="formcontactoEmail" type="text" placeholder=" Email:"> <br> <br>
-                        <textarea name placeholder=" Mensaje:" class="formcontactoMensaje" cols="30" rows="10"></textarea>
+                        <input class="formcontactoNombre" type="text" placeholder=" Name:"> <br> <br>
+                        <input class="formcontactoEmail" type="text" placeholder=" Email Address:"> <br> <br>
+                        <textarea name placeholder="Message:" class="formcontactoMensaje" cols="30" rows="10"></textarea>
                         <br> <br>
                         <div id="submit">
-                            <input type="submit" value="Enviar">
+                            <input class="boton" type="submit" value="Submit">
                         </div>
                     </form>
                 </article>
