--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="CSS/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <title>MARA ZUKER</title>
     </head>
     <body id="body"> 
@@ -14,7 +15,7 @@
             <!--MENU NAV-->
             <nav id="navBar">
                 <article class="LogoHeader">
-                    <h4><a href="#">mara zuker</a></h4>
+                    <h4 class="animate__animated animate__bounce"><a href="#">mara zuker</a></h4>
                 </article>
                 <input type="checkbox" id="check">
                 <article class="barras">
@@ -38,13 +39,13 @@
             <div id="carouselExampleFade" class="carousel slide carousel-fade">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/inicio/8 b maxi.JPG" class="d-block w-100" alt="sobrina">
+                        <img src="images/inicio/8 b maxi.JPG" class="d-block w-100" alt="maxi1">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/inicio/12 sobri.jpg" class="d-block w-100" alt="maxi1">
+                        <img src="images/inicio/12 sobri.jpg" class="d-block w-100" alt="sobrina">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/inicio/11 lu.jpg" class="d-block w-100" alt="dani">
+                        <img src="images/inicio/11 lu.jpg" class="d-block w-100" alt="Lu">
                     </div>
                     <div class="carousel-item">
                         <img src="images/inicio/9 maxi.JPG" class="d-block w-100" alt="maxi2">
@@ -58,6 +59,13 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
+            </div>
+            <div class="imagenesMobile">
+                <img src="images/inicio/8 b maxi.JPG" alt="maxi1">
+                <img src="images/inicio/12 sobri.jpg" alt="sobrina">
+                <img src="images/inicio/11 lu.jpg" alt="Lu">
+                <img src="images/inicio/9 maxi.JPG" alt="maxi2">
+
             </div>
         </main>
         
