--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -40,7 +40,7 @@
         <main class="MainContacto">
             <section id="contenedorContacto"> 
                 <article class="formContacto">
-                    <form action="#">
+                    <form action="#" id>
                         <input class="formcontactoNombre" type="text" placeholder=" Name:"> <br> <br>
                         <input class="formcontactoEmail" type="text" placeholder=" Email Address:"> <br> <br>
                         <textarea name placeholder="Message:" class="formcontactoMensaje" cols="30" rows="10"></textarea>
