--- a/pages/lugares.html
+++ b/pages/lugares.html
@@ -45,11 +45,11 @@
         <main>
             <section id="fotosLugares">
                 <img src="../images/lugares/lugares 0.JPG" alt="hermanos">
-                <img src="../images/lugares/lugares 1.JPG" alt="bajada">
+                <img src="../images/lugares/lugares 1compress.jpg" alt="bajada">
                 <img src="../images/lugares/lugares 2.JPG" alt="escuela">
                 <img src="../images/lugares/lugares 3.JPG" alt="jerusalem">
-                <img src="../images/lugares/lugares 4.jpg" alt="cesarea">
-                <img src="../images/lugares/lugares 5.jpg" alt="lesboa">
+                <img src="../images/lugares/lugares 4compress.jpg" alt="cesarea">
+                <img src="../images/lugares/lugares 5compress.jpg" alt="lesboa">
                 <img src="../images/lugares/lugares 6.JPG" alt="estambul">
                 <img src="../images/lugares/lugares 7.JPG" alt="military">
                 <img src="../images/lugares/lugares 8.JPG" alt="chicos">
