--- a/pages/personas.html
+++ b/pages/personas.html
@@ -51,7 +51,7 @@
                     <img src="../images/personas/personas 1.JPG" alt="piercing">
                 </article>
                 <article class="ContenedorPersonas3 TamañoBox">
-                    <img src="../images/personas/personas 2.JPG" alt="jero">
+                    <img src="../images/personas/personas 2compress.jpg" alt="jero">
                 </article>
                 <article class="ContenedorPersonas4 TamañoBox">
                     <img src="../images/personas/personas 3.JPG" alt="pucho">
@@ -63,7 +63,7 @@
                     <img src="../images/personas/personas 5.jpg" alt="moni">
                 </article>
                 <article class="ContenedorPersonas7 TamañoBox">
-                    <img src="../images/personas/personas 6.JPG" alt="ana">
+                    <img src="../images/personas/personas 6compress.jpg" alt="ana">
                 </article>
                 <article class="ContenedorPersonas8 TamañoBox">
                     <img src="../images/personas/personas 7.JPG" alt="agus">
