--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
             <div id="carouselExampleFade" class="carousel slide carousel-fade">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/inicio/8 b maxi.JPG" class="d-block w-100" alt="maxi1">
+                        <img src="images/inicio/compressmaxi1.jpg" class="d-block w-100" alt="maxi1">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/inicio/12 sobri.jpg" class="d-block w-100" alt="sobrina">
+                        <img src="images/inicio/compresssobri.jpg" class="d-block w-100" alt="sobrina">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/inicio/11 lu.jpg" class="d-block w-100" alt="Lu">
+                        <img src="images/inicio/compresslu.jpg" class="d-block w-100" alt="Lu">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/inicio/9 maxi.JPG" class="d-block w-100" alt="maxi2">
+                        <img src="images/inicio/maxi2.JPG" class="d-block w-100" alt="maxi2">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
